zooming out on boids, trying to fix the weird safari spacing issue

--- a/index.scss
+++ b/index.scss
@@ -55,12 +55,14 @@ body {
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: $red;
   font-style: italic;
+  font-weight: normal;
   font-size: 4em;
 }
 
 .under-title {
   font-style: italic;
   font-size: 1.3em;
+  font-weight: normal;
   margin: auto;
 }
 
@@ -227,7 +229,7 @@ body {
   border-style: solid;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 630px) {
   .side {
       writing-mode: vertical-lr;
   }
@@ -256,7 +258,7 @@ body {
   }
 }
 
-@media screen and (max-height: 550px) {
+@media screen and (max-height: 550px){
   .title {
     font-size: 2.71em;
   }
